# p3s

./: .gitignore  README.md  p3s.cabal  stack.yaml
app/: Main.hs
src/P3S/: Apply.hs  Audio.hs  Contravariant.hs  Generator.hs  Math.hs  Misc.hs  Note.hs  PCM.hs  Physics.hs  Position.hs  Profunctor.hs  Transformer.hs  Voice.hs
src/P3S/Generator/: Physical.hs  Sample.hs  Types.hs
src/P3S/Transformer/: Basic.hs  Volume.hs
